<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BathRoom">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/SmartApp.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/back_arrow"
            app:title="Living Room  1">

            <TextView
                style="@style/toolbartext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/montserratbbold"
                android:gravity="center"
                android:text="@string/bathrm"
                android:textColor="@color/bg"
                tools:ignore="TextContrastCheck" />

        </androidx.appcompat.widget.Toolbar>



    </com.google.android.material.appbar.AppBarLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout"
        android:alignmentMode="alignMargins"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/master"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_gravity="left"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/power"
                        app:tint="@color/bg" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"

                        tools:ignore="UseSwitchCompatOrMaterialXml" />


                </LinearLayout>


                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/master"
                    android:gravity="center"
                    android:textColor="@color/bg"
                    android:layout_margin="5dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/smalltitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="@color/bg"
                    android:textSize="15sp"
                    android:layout_marginEnd="10dp"
                    android:paddingTop="2dp"
                    android:text="Total Devices: 7"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/lamp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/linear2"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/lamps"
                        app:tint="@color/bg" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"

                        tools:ignore="UseSwitchCompatOrMaterialXml" />


                </LinearLayout>


                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lamp1"
                    android:gravity="center"
                    android:textColor="@color/bg"
                    android:layout_margin="4dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/smalltitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/bg"
                    android:textSize="13sp"
                    android:layout_marginEnd="25dp"
                    android:padding="5dp"
                    android:text='LG 50"LED'/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/brightness1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/sun"
                        app:tint="@color/bg" />

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"

                        tools:ignore="UseSwitchCompatOrMaterialXml" />


                </LinearLayout>


                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bright1"
                    android:gravity="center"
                    android:textColor="@color/bg"
                    android:layout_margin="5dp"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seekbright1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"

                    />



            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/lamp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/linear4"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/bulb"
                        app:tint="@color/bg" />

                    <Switch
                        android:id="@+id/switch4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"


                        tools:ignore="UseSwitchCompatOrMaterialXml" />


                </LinearLayout>


                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lamp2"
                    android:gravity="center"
                    android:paddingBottom="20dp"
                    android:textColor="@color/bg"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp" />




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/brightness2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:id="@+id/linear5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/img5"
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_gravity="start"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/water"
                        app:tint="@color/bg" />

                    <Switch
                        android:id="@+id/switch5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />


                </LinearLayout>


                <TextView
                    android:id="@+id/title5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bright2"
                    android:gravity="center"
                    android:textColor="@color/bg"
                    android:layout_margin="5dp"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seekbright2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="1dp"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/brightness3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:id="@+id/linear6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/img6"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_gravity="start"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/sun"
                        app:tint="@color/bg" />

                    <Switch
                        android:id="@+id/switch6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"

                        tools:ignore="UseSwitchCompatOrMaterialXml" />


                </LinearLayout>


                <TextView
                    android:id="@+id/title6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bright3"
                    android:gravity="center"
                    android:textColor="@color/bg"
                    android:layout_margin="5dp"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seekbright3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>